--- a/todo
+++ b/todo
@@ -1,1 +1,4 @@
 Client || src || pages || Profile || ResponseData typeError ✅
+Create a Demo User
+Give access to limited performance for the Demo user.
+Gets a demo user popup if Server is unavailable
